@@ -1,21 +1,0 @@
-<%%= simple_form_for @<%= file_name %> do |form| %>
-  
-  <%% if @<%= file_name %>.errors.any? -%>
-  <div id="errorExplanation">
-    <h2><%%= "#{pluralize(@<%= file_name %>.errors.count, "error")} prohibited this #{<%= class_name %>.name.titleize} from being saved:" %></h2>
-    <ul>
-      <%%- @<%= file_name %>.errors.full_messages.each do |msg| -%>
-      <li><%%= msg %></li>
-      <%%- end -%>
-    </ul>
-  </div>
-  <%% end -%>
-
-  <%- for attribute in attributes -%>
-  <%%= form.input :<%= attribute.name %>, :label => '<%= attribute.name.titleize %>' %>
-  <%- end -%>
-
-  <div class="actions">
-    <%%= form.button :submit %>
-  </div>
-<%% end %>
